# tauri-dylive-download-codex

./: .gitignore  package.json  pnpm-lock.yaml
.codex/skills/: README.md
.codex/skills/tauri-v2-app-skill/: SKILL.md
openspec/changes/add-tauri-v2-app-skill/: proposal.md  tasks.md
openspec/changes/add-tauri-v2-app-skill/specs/tauri-v2-app-skill/: spec.md
openspec/changes/archive/2026-02-26-add-tauri-v2-app-skill/: design.md  tasks.md
openspec/changes/build-douyin-webview-m3u8-downloader/: design.md  proposal.md  tasks.md
openspec/changes/build-douyin-webview-m3u8-downloader/specs/douyin-m3u8-local-download/: spec.md
openspec/changes/build-douyin-webview-m3u8-downloader/specs/douyin-webview-stream-discovery/: spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: VALIDATION.md  index.html  main.js
