[package]
name = "douyin_webview_m3u8_downloader"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
